--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 </div>
             </div>
             <div class="hero-image">
-                <img src="profile.jpg" alt="Hesham Tech Zone" id="profile-image">
+                <img src="https://drive.google.com/uc?export=view&id=15g-Du1zgKUodab4FKpUwMfbUod1Rx3xm" alt="Hesham Tech Zone" id="profile-image">
             </div>
         </div>
     </section>
@@ -70,7 +70,7 @@
                     </div>
                 </div>
                 <div class="about-image">
-                    <img src="profile.jpg" alt="Hesham Tech Zone">
+                    <img src="https://drive.google.com/uc?export=view&id=15g-Du1zgKUodab4FKpUwMfbUod1Rx3xm" alt="Hesham Tech Zone">
                 </div>
             </div>
         </div>
@@ -119,7 +119,7 @@
             <h2 class="section-title">أعمالي</h2>
             <div class="portfolio-grid">
                 <div class="portfolio-item">
-                    <img src="project1.jpg" alt="مشروع 1">
+                    <img src="https://drive.google.com/uc?export=view&id=15g3U82rx2Cm7eUCXIoWaUG9YwYO0wb2j" alt="مشروع 1">
                     <div class="portfolio-overlay">
                         <h3>موقع تصميم الشعارات</h3>
                         <p>أداة لإنشاء شعارات مشابهة لـ Canva ولكن بميزات مبسطة.</p>
@@ -127,7 +127,7 @@
                     </div>
                 </div>
                 <div class="portfolio-item">
-                    <img src="project2.jpg" alt="مشروع 2">
+                    <img src="https://drive.google.com/uc?export=view&id=15gJo-9I6bN7gzVyAOtu4XkfY_JMs2_GA" alt="مشروع 2">
                     <div class="portfolio-overlay">
                         <h3>موقع تجاري</h3>
                         <p>موقع لشركة تقنية متخصصة في حلول تكنولوجيا المعلومات.</p>
@@ -135,7 +135,7 @@
                     </div>
                 </div>
                 <div class="portfolio-item">
-                    <img src="project3.jpg" alt="مشروع 3">
+                    <img src="https://drive.google.com/uc?export=view&id=15hJgB1BxKSMugTsCmmCNDaRpsFEqg0_y" alt="مشروع 3">
                     <div class="portfolio-overlay">
                         <h3>تطبيق ويب تفاعلي</h3>
                         <p>تطبيق ويب مبني باستخدام React مع Tailwind CSS.</p>
@@ -143,7 +143,7 @@
                     </div>
                 </div>
                 <div class="portfolio-item">
-                    <img src="project4.jpg" alt="مشروع 4">
+                    <img src="https://drive.google.com/uc?export=view&id=15imYHwjK5cxuaf4g9lbqiB-0nhnA1b_h" alt="مشروع 4">
                     <div class="portfolio-overlay">
                         <h3>موقع شخصي</h3>
                         <p>Portfolio مصمم خصيصاً لمطور ويب مستقل.</p>
